[package]
name = "lua-replace"
version = "0.1.0"
authors = ["blujay <the.blu.dev@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { path = "../skyline-rs" }
skyline_smash = { path = "../skyline-smash" }
parking_lot = { version = "0.11.1", features = ["nightly"] }
lazy_static = "1.4.0"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
